# ads-practice

./: README.md  pyproject.toml
ads_practice/: binary_search.py  bubblesort.py  graph.py  minheap.py  queue.py  stack.py  trie.py
tests/: test_binary_search.py  test_bubblesort.py  test_graph.py  test_minheap.py  test_queue.py  test_stack.py  test_trie.py
