[tool.poetry]
name = "ads-practice"
version = "0.1.0"
description = ""
authors = ["Michael Bui <michaelbui99@hotmail.com>"]
readme = "README.md"
packages = [{include = "ads_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
